k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mp-cases-platform
  labels:
    name: mp-cases-platform
